--- a/AE2/settings.cfg
+++ b/AE2/settings.cfg
@@ -3,12 +3,18 @@
 ~CONFIG_VERSION: rv6-stable-7
 
 counters {
-    I:lastGridStorage=0
-    I:lastPlayer=0
+    I:lastGridStorage=1
+    I:lastPlayer=1
+}
+
+
+gridstorage {
+    S:0=H4sIAAAAAAAAAONiYGBjYEsqTUtLLWKAAQAPku3jFQAAAA==
 }
 
 
 players {
+    I:3ebf2647-6fbf-4921-bcd0-cf874137e18b=0
 }
 
 
